k8s/injestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
spec:
  selector:
    app: ingestion
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
